feat: integrated security
